fix(button): align buttons height (#63)
* fix: buttons height

Fix buttons height by setting `border-color` to transparent for all buttons except for btn-default and btn-link

* Update screenshots generated from PhantomCSS

* Update screenshots generated from PhantomCSS

--- a/src/theme/_buttons.scss
+++ b/src/theme/_buttons.scss
@@ -44,7 +44,7 @@ $btn-background-tint-percent: 10 !default;
 	&-info,
 	&-warning,
 	&-danger {
-		border: none;
+		border-color: transparent;
 	}
 
 	&-success,
